--- a/service.xbmc-fritzbox/resources/language/German/strings.xml
+++ b/service.xbmc-fritzbox/resources/language/German/strings.xml
@@ -11,20 +11,11 @@
 	<!-- Default Tab -->
 	<string id="30200">IP Addresse der Fritzbox</string>
 	<string id="30210">Anzeigedauer der Info (Sekunden)</string>
-	<string id="30220">Debug</string>
 
 	<!-- Addressbook -->
 	<string id="30300">Benutze Fritzbox Addressbuch</string>
-	<string id="30310">Pfad zum Fritzbox Addressbook</string>
-	<string id="30320">Benutze einfache Textdatei (CSV-Datei)</string>
-	<string id="30330">Pfad zur Textdatei</string>
-	<string id="30331">Pfad zum Bilderordner</string>
-	<string id="30340">Benutze IPhone Adressbuch</string>
-	<string id="30350">Pfad zu Addressbook.sqlite</string>
-	<string id="30360">Pfad zu AddressbookImages.sqlite</string>
-	<string id="30370">Pfad zum Bilderordner</string>
-	
-	
+    <string id="30301">Anmelde Passwort</string>
+
 	<!-- Actions -->
 	<string id="30400">XBMC bei eingehenden Anrufen pausieren?</string>
 </strings>
