option to pause all media

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -21,6 +21,7 @@
 	<!-- Actions -->
 	<string id="30400">Pause playback on incoming calls</string>
     <string id="30401">Resume paused playback on terminated calls</string>
+    <string id="30402">Pause only Video and no other media</string>
 
     <!-- Interactions -->
     <string id="31000">Leaving call</string>
