option to reduce volume while ringing

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -27,6 +27,8 @@
 	<string id="30400">Pause playback on incoming calls</string>
     <string id="30401">Resume paused playback on terminated calls</string>
     <string id="30402">Pause only Video and no other media</string>
+    <string id="30403">Reduce Volume while ringing</string>
+    <string id="30404">About how many percent</string>
 
     <!-- Interactions -->
     <string id="31000">Leaving call</string>
