option to pause all media

--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -12,6 +12,7 @@
 	<string id="30200">IP Addresse der Fritzbox</string>
 	<string id="30210">Anzeigedauer der Info (Sekunden)</string>
 	<string id="30211">Wartezeit vor dem Start</string>
+    <string id="30212">Ignoriere Telefonnummern (Kommasepariert)</string>
 
 	<!-- Addressbook -->
 	<string id="30300">Benutze Fritzbox Addressbuch</string>
