--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -12,6 +12,7 @@
 	<string id="30200">IP Address</string>
 	<string id="30210">Display Durtion (seconds)</string>
     <string id="30211">Time to wait before start</string>
+    <string id="30212">Ignore phone numbers (comma separated)</string>
 
 	<!-- Addressbook -->
 	<string id="30300">Use Fritzbox Addressbook</string>
