--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -30,6 +30,7 @@
     <string id="30402">Pausiere nur Videos und keine anderen Medien</string>
     <string id="30403">Reduziere die Lautstärke während es klingelt</string>
     <string id="30404">Um wie viel Prozent</string>
+    <string id="30405">Bereits beim Klingeln pausieren</string>
 
     <!-- Interactions -->
     <string id="31000">Ausgehender Anruf</string>
