--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -43,6 +43,7 @@
     <string id="31007">Duration: %sh</string>
     <string id="31008">Fritzbox unreachable</string>
     <string id="31009">Could not connect to Fritzbox (%s).</string>
+    <string id="31010">Unknown</string>
 
 	
 </strings>
