--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -16,7 +16,8 @@
 
 	<!-- Addressbook -->
 	<string id="30300">Use Fritzbox Addressbook</string>
-    <string id="30301">Login Password</string>
+    <string id="30313">FritzBox Username</string>
+    <string id="30301">FritzBox Password</string>
     <string id="30302">Request all addressbooks</string>
     <string id="30303">Use Addressbook id</string>
     <string id="30304">Use Google Login (for pictures only)</string>
