improved error handling if phonebook access failed

--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -47,6 +47,8 @@
     <string id="31008">Fritzbox nicht erreichbar</string>
     <string id="31009">Konnte keine Verbindung zur Fritzbox herstellen (%s)</string>
     <string id="31010">Unbekannt</string>
+    <string id="31011">Fritzbox Addressbuch</string>
+    <string id="31012">Zugriff auf Fritzbox Addressbuch fehlgeschlagen: %s</string>
 
 </strings>
 
