--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -47,7 +47,8 @@
     <string id="31008">Fritzbox unreachable</string>
     <string id="31009">Could not connect to Fritzbox (%s).</string>
     <string id="31010">Unknown</string>
-
+    <string id="31011">Fritzbox Addressbook</string>
+    <string id="31012">Cound not access Fritzbox Addressbook: %s</string>
 	
 </strings>
 
