--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -34,6 +34,8 @@
     <string id="30403">Reduziere die Lautstärke während es klingelt</string>
     <string id="30404">Um wie viel Prozent</string>
     <string id="30405">Bereits beim Klingeln pausieren</string>
+    <string id="30405">Forsetzen der Wiedergabe verzögern um Sekunden verzögern</string>
+
 
     <!-- Interactions -->
     <string id="31000">Ausgehender Anruf</string>
@@ -49,6 +51,8 @@
     <string id="31010">Unbekannt</string>
     <string id="31011">Fritzbox Addressbuch</string>
     <string id="31012">Zugriff auf Fritzbox Addressbuch fehlgeschlagen: %s</string>
+    <string id="31013">Fortsetzen</string>
+    <string id="31014">Warte %d sekunden ...</string>
 
 </strings>
 
