--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -2,61 +2,82 @@
 <strings>
     <!-- Addon Name -->
     <string id="30000">FritzBox Callmonitor</string>
-    <!-- some other strings -->
-    <string id="30100">Hi</string>
+
+
     <!-- Settings -->
-    <string id="30001">FritzBox</string>
-    <string id="30002">Addresses</string>
-    <string id="30003">Actions</string>
-    <!-- Default Tab -->
-    <string id="30200">IP address</string>
-    <string id="30210">Display duration (seconds)</string>
-    <string id="30211">Time to wait before start</string>
-    <string id="30212">Ignore phone numbers (comma separated)</string>
-    <string id="30213">Test configuration</string>
+    <string id="30101">General</string> <!-- Category General -->
+        <string id="30201">FritzBox IP address / Hostname</string> <!-- Monitor_Address -->
+        <string id="30202">Test configuration</string>
+        <string id="30203">Ignore phone numbers (comma separated)</string> <!-- Monitor_IgnoreNumbers -->
 
-    <!-- Addressbook -->
-    <string id="30300">Use FritzBox Addressbook</string>
-    <string id="30313">FritzBox Username</string>
-    <string id="30301">FritzBox Password</string>
-    <string id="30302">Request all addressbooks</string>
-    <string id="30303">Use addressbook id</string>
-    <string id="30304">Use Google Login (for pictures only)</string>
-    <string id="30305">Google Username</string>
-    <string id="30306">Google Password</string>
-    <string id="30310">Use Klicktel.de Phonebook inverse search</string>
-    <string id="30311">Use directory for picture lookup</string>
-    <string id="30312">Path to picture directory</string>
+    <string id="30102">Addresses</string> <!-- Category Addressbook -->
+        <string id="30210">FritzBox</string>
+        <string id="30211">Use FritzBox Addressbook</string> <!-- Addressbook_Fritzadress -->
+        <string id="30212">Username</string> <!-- Addressbook_Fritzadress_Username -->
+        <string id="30213">Password</string> <!-- Addressbook_Fritzadress_Password -->
+        <string id="30214">Request all addressbooks</string> <!-- Addressbook_Fritzadress_book_all -->
+        <string id="30215">Use addressbook id</string> <!-- Addressbook_Fritzadress_book_id -->
 
-    <!-- Actions -->
-    <string id="30400">Pause playback on incoming calls</string>
-    <string id="30401">Resume paused playback on terminated calls</string>
-    <string id="30402">Pause only video and no other media</string>
-    <string id="30403">Reduce volume while ringing</string>
-    <string id="30404">About how many percent</string>
-    <string id="30405">Already pause when ringing</string>
-    <string id="30406">Delay resume of playback (seconds)</string>
+        <string id="30220">Google Contacts (for pictures only)</string>
+        <string id="30221">Use Google Contact pictures</string> <!-- Addressbook_Google -->
+        <string id="30222">Username</string> <!-- Addressbook_Google_Username -->
+        <string id="30223">Password</string> <!-- Addressbook_Google_Password -->
+
+        <string id="30230">Klicktel.de</string>
+        <string id="30231">Use Klicktel.de Phonebook inverse search</string> <!-- Addressbook_Klicktel -->
+
+        <string id="30240">Picture directory</string>
+        <string id="30241">Use directory for picture lookup</string> <!-- Addressbook_Folderimages -->
+        <string id="30242">Path to picture directory</string> <!-- Addressbook_Folderimages_Path -->
+
+    <string id="30103">Actions</string> <!-- Category Actions -->
+
+        <string id="30270">Notifications</string>
+        <string id="30271">Display duration (seconds)</string> <!-- Action_Notification_Duration -->
+
+        <string id="30280">When phone rings ...</string>
+        <string id="30281">Show</string> <!-- Action_OnRing_Notify -->
+        <string id="30282">Pause playback</string> <!-- Action_OnRing_Pause -->
+        <string id="30283">Pause only video and no other media</string> <!-- Action_OnRing_Pause_VideoOnly -->
+        <string id="30284">Reduce volume</string> <!-- Action_OnRing_LowerVolume -->
+        <string id="30285">About how many percent</string> <!-- Action_OnRing_LowerVolume_Amount -->
+
+        <string id="30290">When phone connects ...</string>
+        <string id="30291">Show</string> <!-- Action_OnConnect_Notify -->
+        <string id="30292">Pause playback</string> <!-- Action_OnConnect_Pause -->
+        <string id="30293">Pause only video and no other media</string> <!-- Action_OnConnect_Pause_VideoOnly -->
+        <string id="30294">Reduce volume</string> <!-- Action_OnConnect_LowerVolume -->
+        <string id="30295">About how many percent</string> <!-- Action_OnConnect_LowerVolume_Amount -->
+
+        <string id="30300">When phone hangs up ...</string>
+        <string id="30301">Show</string> <!-- Action_OnHangup_Notify -->
+        <string id="30302">Resume playback</string> <!-- Action_OnHangup_Resume -->
+        <string id="30303">Delay resume of playback (seconds)</string> <!-- Action_OnHangup_Resume_Delay -->
+        <string id="30304">Reset Volume</string> <!-- Action_OnHangup_ResetVolume -->
+
+        <string id="30310">When a call is leaving ...</string>
+        <string id="30311">Show</string> <!-- Action_OnLeaving_Notify -->
 
     <!-- Interactions -->
-    <string id="31000">Outgoing call</string>
-    <string id="31001">to %s (by %s)</string>
-    <string id="31002">Incoming call</string>
-    <string id="31003">from %s</string>
-    <string id="31004">Connected</string>
-    <string id="31005">to %s</string>
-    <string id="31006">Call ended</string>
-    <string id="31007">Duration: %sh</string>
-    <string id="31008">FritzBox unreachable</string>
-    <string id="31009">Could not connect to FritzBox (%s).</string>
-    <string id="31010">Unknown</string>
-    <string id="31011">FritzBox Addressbook</string>
-    <string id="31012">Could not access FritzBox Addressbook: %s</string>
-    <string id="31013">Resume</string>
-    <string id="31014">Waiting %d seconds ...</string>
-    <string id="31015">Could not connect to FritzBox</string>
-    <string id="31016">Connection to FritzBox successful</string>
-    <string id="31017">Result</string>
-    <string id="31018">Reboot to use new settings.</string>
+    <string id="30400">Outgoing call</string>
+    <string id="30401">to %s (by %s)</string>
+    <string id="30402">Incoming call</string>
+    <string id="30403">from %s</string>
+    <string id="30404">Connected</string>
+    <string id="30405">to %s</string>
+    <string id="30406">Call ended</string>
+    <string id="30407">Duration: %sh</string>
+    <string id="30408">FritzBox unreachable</string>
+    <string id="30409">Could not connect to FritzBox (%s).</string>
+    <string id="30410">Unknown</string>
+    <string id="30411">FritzBox Addressbook</string>
+    <string id="30412">Could not access FritzBox Addressbook: %s</string>
+    <string id="30413">Resume</string>
+    <string id="30414">Waiting %d seconds ...</string>
+    <string id="30415">Could not connect to FritzBox</string>
+    <string id="30416">Connection to FritzBox successful</string>
+    <string id="30417">Result</string>
+    <string id="30418">Reboot to use new settings.</string>
 
 </strings>
 
